Added index file for assignment 2.

--- a/James_Chapman/Assigment-2/index.html
+++ b/James_Chapman/Assigment-2/index.html
@@ -1,16 +1,10 @@
-<html>
-<body>
-<h1>
-<h2>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Asssignment 2</title>
+  </head>
+  <body>
 
-
-
-
-
-
-
-
-
-
-</body>
+  </body>
 </html>
