--- a/James_Chapman/Assigment-2/index.html
+++ b/James_Chapman/Assigment-2/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Asssignment 2</title>
-  </head>
-  <body>
-
-  </body>
+<html>
+<body bgcolor="Red">
+<center><h1>I Like Dogs</h1></center>
+<img src= "Pictures/img/dogs_meet.jpg" alt="When two dogs meet" width="100" height="100" />
+<a href="index.html"> Home<a/>
+<a href=”about.html”>About Dogs</a>
+<table>
+<tr><th>Different Kinds of Dogs:<th/>
+<td> American bulldog</td>
+<td>Pit Bull</td>
+<td>Rottwieler</td></tr>
+<title>Asssignment 2</title>
+</body>
 </html>
