--- a/James_Chapman/Assignment-3/index.html
+++ b/James_Chapman/Assignment-3/index.html
@@ -1,19 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <h1>Red delicious Apples</h1>
     <meta charset="utf-8">
-    <title>Red Apples</title>  </head>
-  <link rel="stylesheet" type="text/css" href="css/master.css">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans"
+    <title>Red Apples</title>
+    <link rel="stylesheet" type="text/css" href="css/master.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  </head>
+  <body>
+  <header>
+    <h1>Red delicious Apples</h1>
+    <h2 id="greeting"></h2></head>
+  </header>
+  <main>
      <a href="index.html"> redApples</a>
-     <img src= "images/red_Apples.jpg.png" alt="When two dogs meet" width="200" height="200" />
-   <section>Red apple growth and health benefits
-   <h2>Information about red apples!
-   </h2>
+  <figure>
+   <img src= "images/red_Apples.jpg.png" alt="When two dogs meet" width="200" height="200" />
+   <figcaption>
+     <p>
+     </p>
+   </figcaption>
+ </figure>
+  <section>Red apple growth and health benefits
   <p title="This is some website content!" style= color:red;>Red Apples is a very delicious fruit.
     Red apples are grown on trees all around the world. Red apples also have very great nutritional health benefits.I was growning
-   up as a child on a slogan that says <ul style= color:red;>"an apple a day keep the doctor away"</ul></p>}</section>
-    <h3>Author: James Chapman</h3>
+   up as a child on a slogan that says <ul style= color:red;>"an apple a day keep the doctor away"</ul></p></section>
+   <div1>
+    <h3><ul><u>James Big Daddy</u></ul></h3>
+     Big Apple eater.
+   </div1>
+   <div2>
+    <h4><ul><u>Jeremiah the son</u></ul></h4>
+     do not like Apples.
+   </div2>
+   <div3>
+    <h5><ul><u> Valerie the wife</u></ul></h5>
+     She expects son to eat apples, if he likes them or not.
+   </div3>
+  <h6 id="Author: James Chapman"></h6>
    </body>
 </html>
