--- a/James_Chapman/Assignment-4/index.html
+++ b/James_Chapman/Assignment-4/index.html
@@ -27,15 +27,15 @@
     Red apples are grown on trees all around the world. Red apples also have very great nutritional health benefits.I was growning
    up as a child on a slogan that says <ul style= color:red;>"an apple a day keep the doctor away"</ul></p></section>
    <div1>
-    <h3><ul>James</ul></h3>
+    <h3><ul><u>James Big Daddy</u></ul></h3>
      Big Apple eater.
    </div1>
    <div2>
-    <h4><ul>Jeremiah the son</ul></h4>
+    <h4><ul><u>Jeremiah the son</u></ul></h4>
      do not like Apples.
    </div2>
    <div3>
-    <h5><ul> Valerie the wife</ul></h5>
+    <h5><ul><u> Valerie the wife</u></ul></h5>
      She expects son to eat apples, if he likes them or not.
    </div3>
   <script type="text/javascripts" src=js/scripts.js>
