Assignment 7 and changes to assignment 6 is committed.

--- a/James_Chapman/Assignment-6/index.html
+++ b/James_Chapman/Assignment-6/index.html
@@ -16,6 +16,7 @@
       <input type="text" id= "message-input">
       <button id="send-button">Send</button>
       <button id="reply-button">Reply</button>
+      <button id="reset-button">Reset</button>
     </footer>
   <script src="scripts.js" ></script>
   </body>
